--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "acorn": "^8.12.0",
     "acorn-walk": "^8.3.3",
     "eslint-linter-browserify": "^8.57.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
